--- a/app/src/main/res/layout/item_name_ex.xml
+++ b/app/src/main/res/layout/item_name_ex.xml
@@ -5,6 +5,7 @@
               android:background="@color/colorPrimary">
 
     <TextView
+        android:id="@+id/txtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="xxx"/>
